<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Enter Job Offer"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout18"
            android:layout_width="393dp"
            android:layout_height="45dp"
            android:layout_marginStart="1dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="383dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Title:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joTitleID"
                android:layout_width="393dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#090909" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout17"
            android:layout_width="393dp"
            android:layout_height="45dp"
            android:layout_marginStart="1dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="390dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Company:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joCompanyID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#090909" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="City:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joCityID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#090909" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout14"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="State:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joStateID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#090909" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="393dp"
            android:layout_height="45dp"
            android:layout_marginStart="1dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="207dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Cost of Living:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joCostOfLivingID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="207dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Commute Time:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joCommuteTimeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="208dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Yearly Salary:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joYearlySalaryID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="1dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="208dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Yearly Bonus:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joYearlyBonusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="393dp"
            android:layout_height="70dp"
            android:layout_marginStart="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Retirement Benefits:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joRetirementBenefitsID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="393dp"
            android:layout_height="45dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Leave Time:"
                android:textColor="#0C0C0C"
                android:textSize="26sp" />

            <EditText
                android:id="@+id/joLeaveTimeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/joSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="saveJobOffer"
                android:text="SAVE"
                android:textColor="#0E0E0E" />

            <Button
                android:id="@+id/joCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelJobOffer"
                android:text="CANCEL"
                android:textColor="#0B0A0A" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>