...
        android:text="Enter Current Job"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout19" />

    <Button
        android:id="@+id/EnterJobOffer"
        android:layout_width="305dp"
        android:layout_height="64dp"
        android:onClick="handleJobOffer"
        android:text="Enter Job Offer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
